--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <html>
-  <body>Hello there, awesome person!</body></html>
+  <head>
+    <title>Awesome Title!</title>
+  </head>
+  
+  <body>
+    Hello there, awesome person!
+  </body>
+</html>
