--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
   <body>
     <h1>Hello there, awesome person!</h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
+    <ol>
+      <li>Movies</li>
+      <li>Cats</li>
+      <li>IMDB</li>
+    </ol>
   </body>
 </html>
