--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <h1>Hello there, awesome person!</h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
     <ol>
-      <li>Movies</li>
-      <li>Cats</li>
-      <li>IMDB</li>
+      <li><a href="https://www.movies.com">Movies</li>
+      <li><a href="https://www.ihazcheeseburger.com">Cats</li>
+      <li><a href="https://www.imdb.com">IMDB</li>
     </ol>
   </body>
 </html>
